# qubes-template-upgrade

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/template_upgrade/: __init__.py  cli.py  disk.py  exceptions.py  orchestrator.py  packages.py  retry.py  rollback.py  runner.py  state.py  version.py
src/template_upgrade/agents/: debian.sh  fedora.sh
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_packages.py  test_retry.py  test_state.py  test_version.py
